syntax = "proto3";
option csharp_namespace = "PixelBoard.Grpc";

import "google/protobuf/timestamp.proto";

service RealTimeGoGrpc {
  rpc GetTeamInfo (TeamInfoRequest) returns (TeamInfoReply);
}

message TeamInfoRequest {
  int32 team = 1;
}

message TeamInfoReply {
  uint32 score = 1;
  uint32 paint_budget = 2;
  google.protobuf.Timestamp locked = 3;
}